# pytest-hello

./: README.md  pyproject.toml  setup.py  test_sample.py
pytest_hello/: plugin.py  pytest_hello.py
