[tool.poetry]
name = "pytest-hello"
version = "0.0.1"
description = "pytest hello."
authors = ["bugmaster <fnngj@126.com>"]
readme = "README.md"
packages = [{include = "pytest_hello"}]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
